--- a/src/app/interceptor-playground/interceptor-playground.component.html
+++ b/src/app/interceptor-playground/interceptor-playground.component.html
@@ -24,7 +24,7 @@
     </div>
     <div *ngIf="retryFailure">
       <h2>Retried final step of interceptor chain (actual http request); but failed</h2>
-      <h3>Details {{error.message}}</h3>
+      <h3>Verify the console for message</h3>
     </div>
     <div *ngIf="shortCircuitedNoResponse">
       <h2>Request is short circuited (skipped)</h2>
@@ -40,7 +40,7 @@
     </div>
     <div *ngIf="errorUnhandled">
       <h2>Received error</h2>
-      <h3>Details{{error.message}}</h3>
+      <h3>Details: {{error.message}}</h3>
     </div>
     <div *ngIf="errorHandledWithMockResponse">
       <h2>Received error</h2>
