--- a/src/app/routing-with-resolve/routing-with-resolve.component.html
+++ b/src/app/routing-with-resolve/routing-with-resolve.component.html
@@ -1,7 +1,7 @@
-Kubric's movies/documentaries from 1950s
-<div *ngIf="movies">
+<h1>Kubric's movies/documentaries from 1950s</h1>
+<section>
   <md-card *ngFor="let movie of movies">
     <md-card-title>{{movie.name}}</md-card-title>
     <md-card-subtitle>{{movie.year}} {{movie.documentary ? 'documentary' : 'movie'}}</md-card-subtitle>
   </md-card>
-</div>
+</section>
